Changelog
=========

0.1 (unreleased)
----------------

- Removed plone.directives.standardtiles dependency. A marker interface is
  much simpler.
  [optilude]

- Move close icon.
  [robgietema]

- unittest2 added as test dependency to make hudson happy.
  [timo]

- Fixed button width.
  [robgietema]

- Removed the registry keys to hide layout and content, which are now schema-hidden
  [shywolf9982]

- Added plone.directives,standardtiles as dependency: should probably be removed once we get the registry stuff out
  [shywolf9982]

- Hooked up plone.directives.standardtiles, settings now honored
  [shywolf9982]

- PEP8
  [jaroel]

- Set tileURL to use p and not span because tinymce auto wraps spans.
  [robgietema]

- Removing interlude import since it does not do anything.
  [timo]

- Fixed pulldown menu.
  [robgietema]

- deco style toolbar
  [laurenskling]

- Rearranged tiles.
  [robgietema]

- * Added the ability to hide field tiles via registry * Changed the format of the widget actions keys to work similarly to the rest
  [shywolf9982]

- name -> value + tests
  [maerteijn]

- name -> value
  [maerteijn]

- Add ordering to items in actions
  [maerteijn]

- Added more sorting to fields, tiles and formats
  [maerteijn]

- Also made IFormat sortable now
  [maerteijn]

- Fixed settings icon.
  [robgietema]

- Added sorting to the formatting categories
  [maerteijn]

- Added WeightedDict interface
  [maerteijn]

- Added tests for the weight fields and primary actions
  [maerteijn]

- Added weight to the actions
  [maerteijn]

- Added sorting for primary and secondary actions
  [maerteijn]

- Added weight so we can sort the actions
  [maerteijn]

- Fixed plone.autoform _getDisallowedFields
  [shywolf9982]

- PPP (PeP8/Pyflakes)
  [maurits]

- Fixed AttributeError when creating a registry when context is None, (happens in the test_config test in test_decoregistry).
  [maurits]

- Translate labels into the right language, by getting a request using getSite.
  [maurits]