@@ -1,0 +1,1 @@
+<tal:block tal:content="structure view/value" />
