@@ -1,0 +1,27 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:z3c="http://namespaces.zope.org/z3c"
+    i18n_domain="plone">
+    
+    <include package="z3c.form" file="meta.zcml" />
+    <include package="z3c.form" />
+
+    <!-- Register layout widget and widget templates -->
+    
+    <adapter factory=".layoutwidget.LayoutFieldWidget" />
+    
+    <z3c:widgetTemplate
+        mode="display"
+        widget="..interfaces.ILayoutWidget"
+        layer="z3c.form.interfaces.IFormLayer"
+        template="templates/layout_display.pt"
+        />
+    
+    <z3c:widgetTemplate
+        mode="input"
+        widget="..interfaces.ILayoutWidget"
+        layer="z3c.form.interfaces.IFormLayer"
+        template="templates/layout_input.pt"
+        />
+</configure>
