@@ -3,10 +3,6 @@ from zope import schema
 
 from plone.app.deco import PloneMessageFactory as _
 
-class IOmittedField(Interface):
-    """Marker interface for schema fields not to be shown in Deco
-    """
-
 class IDecoRegistryAdapter(Interface):
     """Marker interface for the registry adapter"""
 
@@ -71,3 +67,7 @@ class IWidgetAction(Interface):
     name = schema.TextLine(title=_(u"Name"))
     actions = schema.List(title=_(u"Actions"),
                           value_type=schema.TextLine())
+
+class ILayoutWidget(Interface):
+    """Marker interface for the layout widget
+    """
