@@ -16,14 +16,14 @@ We can now add the layout behavior to the page type.
 
     >>> browser.open('http://nohost/plone/dexterity-types/plone.app.page/@@behaviors')
     >>> browser.getControl(name='form.widgets.plone.app.dexterity.behaviors.metadata.IDublinCore:list').value = 'selected'
-    >>> browser.getControl(name='form.widgets.plone.app.layoutbehavior.ILayout:list').value = 'selected'
+    >>> browser.getControl(name='form.widgets.plone.app.page.behavior.ILayout:list').value = 'selected'
     >>> browser.getControl(name="form.buttons.apply").click()
 
 Our page type should have the layout behavior assigned.
 
     >>> portal = layer['portal']
     >>> page_type = getattr(portal.portal_types, "plone.app.page")
-    >>> 'plone.app.layoutbehavior.ILayout' in page_type.behaviors
+    >>> 'plone.app.page.behavior.ILayout' in page_type.behaviors
     True
 
 Config
