@@ -4,13 +4,12 @@ import pprint
 import interlude
 from plone.testing import layered
 
-from plone.app.deco.tests.base import PADECO_FUNCTIONAL_TESTING
+from plone.app.deco.testing import DECO_FUNCTIONAL_TESTING
 
 optionflags = (doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE)
-testfiles = (
+functionalTestFiles = (
     'test_browser_decoconfig.txt',
 )
-
 
 def test_suite():
     suite = unittest.TestSuite()
@@ -20,6 +19,6 @@ def test_suite():
                                      globs={'interact': interlude.interact,
                                             'pprint': pprint.pprint,
                                             }),
-                layer=PADECO_FUNCTIONAL_TESTING)
-        for test in testfiles])
+                layer=DECO_FUNCTIONAL_TESTING)
+        for test in functionalTestFiles])
     return suite
